--- a/14_uzduotis.html
+++ b/14_uzduotis.html
@@ -101,6 +101,11 @@
                 tekstas += stulpelis(Math.round(auto[ind][2] / auto[ind][3] / 3.6), true);
                 tekstas += '</div>';
                 document.getElementById("rez").innerHTML += tekstas;
+                document.getElementById("input1").value = "";
+                document.getElementById("input2").value = "";
+                document.getElementById("input3").value = "";
+                document.getElementById("input4").value = "";
+ 
             }
         }
 
